@@ -104,6 +104,7 @@ Version 1.3-svn:
     * Increased the melee attack of the Goblin Rouser from 5-3 to 6-3.
     * Fixed a bug which prevented a Mermaid Siren picking up a storm trident.
     * Fixed a bug which caused the slow effect being applied twice.
+    * If a unit gains enough XP to gain 2 levels this will be done directly.
 
   * User interface
     * Users in the MP lobby can be marked as friends, and notifications received
